# ALDEENS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEMO.md  EVALUATION.md  LICENSE  README.md  RULES.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  README.md  pdf_export.py  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/agents/: analystAgent.py  chainAgent.py  conductor.py  detectionAgent.py  evidenceAgent.py  safetyAgent.py  tacticAgent.py
backend/app/core/: __init__.py  analyst.py  audit.py  branding.py  chain.py  config.py  detections.py  evidence.py  guardrails.py  lens_report_builder.py  memory.py  models.py  process_graph.py  scoring.py  security.py  tactics.py  telemetry.py  verdict_engine.py
backend/datasets/: provenance.json
backend/datasets/public/: upstreamBenchmarks.json
backend/datasets/samples/: adminPowerShellInventory.json  expectedFindings.json  lsassAccessSignal.json  officeToPowerShell.json  suspiciousOutboundPowerShell.json
backend/rules/: credentialAccess.yml  network.yml  persistence.yml  powershell.yml  windows.yml
backend/scripts/: refreshBenchmarks.py
backend/skills/: extractEvidence.md  mapAttackTactics.md  readWindowsTelemetry.md  reconstructAttackChain.md  reviewSafety.md  writeAnalystBrief.md
backend/tests/: testAnalystCitations.py  testCli.py  testConfidenceOverride.py  testCredentialAccess.py  testEvaluator.py  testGuardrails.py  testIncidentReportDetails.py  testOfficeChain.py  testPdfExport.py  testPublicBenchmarks.py  testScoring.py  testSecurityControls.py
hooks/: audit-log.py  (+2 more)
(+79 files in other folders)
